[gd_scene load_steps=3 format=3 uid="uid://cbcmdbatiwbjn"]

[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="1_40f41"]
[ext_resource type="Theme" uid="uid://dh2skylq4em3t" path="res://Themes/MainMenu.tres" id="2_m5mbr"]

[node name="GameOver" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40f41")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -34.0
offset_right = 61.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_m5mbr")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReasonLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_m5mbr")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m5mbr")
text = "Retry"

[node name="ExitButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m5mbr")
text = "Exit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
